# wine-nx

./: .gitignore  .gitmodules  README.md  build.txt  configure  configure.ac
.github/workflows/: ci.yml
dlls/advapi32/: Makefile.in  crypt.c  security.c
dlls/amd_ags_x64/: Makefile.in  amd_ags_x64_main.c
dlls/appwiz.cpl/: addons.c
dlls/atiadlxx/: Makefile.in  atiadlxx.spec  atiadlxx_main.c
dlls/bcrypt/: bcrypt_internal.h  bcrypt_main.c  gnutls.c
dlls/comctl32_v6/: static.c
dlls/crypt32/: main.c  unixlib.c
dlls/d2d1/: device.c
dlls/d3dx10_43/: async.c  dxhelpers.h  texture.c
dlls/d3dx11_43/: async.c  dxhelpers.h  texture.c
dlls/d3dx9_36/: d3dx9_private.h  d3dx_helpers.c  d3dx_helpers.h  mesh.c  texture.c  util.c
dlls/dbghelp/: dwarf.c  elf_module.c
dlls/ddraw/: ddraw.c  surface.c
dlls/devenum/: createdevenum.c
dlls/dmime/: performance.c
dlls/dmloader/: loader.c
dlls/dsound/: dsound.c  dsound_private.h  primary.c
dlls/dwmapi/: dwmapi_main.c
dlls/dwrite/: analyzer.c  dwrite_private.h  font.c  opentype.c
dlls/gdi32/: text.c
dlls/gdiplus/: graphics.c
dlls/hidclass.sys/: device.c
dlls/ieframe/: navigate.c
dlls/imm32/: ime.c
dlls/jscript/: arraybuf.c  dispex.c  engine.c  function.c  jscript.c  jscript.h  jsdisp.idl
dlls/kernel32/: kernel32.spec
dlls/kernelbase/: console.c  debug.c  file.c  kernelbase.spec  loader.c  main.c  memory.c  process.c  registry.c  sync.c  version.c
dlls/mciavi32/: mciavi.c  mmoutput.c
dlls/mf/: sar.c  session.c  topology_loader.c
dlls/mfmediaengine/: main.c
dlls/mfplat/: buffer.c
dlls/mfsrcsnk/: media_source.c
dlls/mlang/: mlang.c
dlls/mmdevapi/: devenum.c
dlls/mountmgr.sys/: mountmgr.c
dlls/mscoree/: metahost.c
dlls/mshtml/: dispex.c  htmlstylesheet.c  htmlwindow.c  mshtml_private.h  mutation.c  nsembed.c
dlls/msi/: package.c
dlls/msv1_0/: unixlib.c
dlls/msvcrt/: file.c  math.c
dlls/msxml3/: Makefile.in  factory.c  httprequest.c  msxml_private.h  uuid.c
dlls/ntdll/: Makefile.in  env.c  exception.c  heap.c  loader.c  ntdll.spec  ntdll_misc.h  path.c  signal_arm64.c  signal_arm64ec.c  signal_x86_64.c  thread.c  unixlib.h  unwind.c
dlls/ntoskrnl.exe/: ntoskrnl_private.h  pnp.c
dlls/opencl/: unix_thunks.c
dlls/opengl32/: make_opengl  thunks.c  unix_private.h  unix_thunks.c  unix_thunks.h  unix_wgl.c  wgl.c
dlls/qasf/: dmowrapper.c  version.rc
dlls/qcap/: qcap_main.c  qcap_private.h
dlls/quartz/: filtergraph.c
dlls/rsaenh/: rsaenh.c
dlls/sechost/: service.c
dlls/secur32/: schannel_gnutls.c
dlls/setupapi/: devinst.c  fakedll.c
dlls/shell32/: shellpath.c  shlexec.c
dlls/user32/: button.c  combo.c  edit.c  input.c  sysparams.c  user32.spec  user_main.c
dlls/win32u/: Makefile.in  clipping.c  d3dkmt.c  d3dkmt_switch_stub.c  dc.c  dce.c  defwnd.c  driver.c  font.c  freetype.c  input.c  main.c  mapping.c  message.c  ntgdi_private.h  ntuser_private.h  opengl.c  rawinput.c  scroll.c  syscall.c  sysparams.c  vulkan.c  win32syscalls.h  win32u.spec  win32u_private.h  window.c  winnx_drv.c  winnx_host_sim.c  winstation.c
dlls/windows.gaming.input/: provider.c
dlls/windows.media.speech/: Makefile.in  async.c  private.h  recognizer.c
dlls/windowscodecs/: libtiff.c  wincodecs_private.h
dlls/winebus.sys/: bus_sdl.c  bus_udev.c  main.c  unix_private.h
dlls/winecrt0/: debug.c
dlls/wined3d/: buffer.c  device.c  directx.c  glsl_shader.c  swapchain.c  wined3d_main.c  wined3d_private.h
dlls/winedmo/: unix_media_type.c
dlls/winegstreamer/: gst_private.h  main.c  media_source.c  quartz_parser.c  unix_private.h  unixlib.c  video_decoder.c  video_processor.c  wg_format.c  wg_media_type.c  wg_parser.c  wg_transform.c  wm_reader.c  wma_decoder.c
dlls/winemac.drv/: display.c  macdrv.h  opengl.c  vulkan.c
dlls/winepulse.drv/: Makefile.in  pulse.c
dlls/winevulkan/: loader.c  loader_thunks.c  loader_thunks.h  make_vulkan  vulkan.c  vulkan_thunks.c  vulkan_thunks.h  winevk.xml
dlls/winewayland.drv/: opengl.c  vulkan.c
dlls/winex11.drv/: bitblt.c  clipboard.c  desktop.c  display.c  event.c  graphics.c  init.c  mouse.c  vulkan.c  window.c  x11drv.h  x11drv_main.c  xim.c  xrandr.c  xrender.c  xvidmode.c
dlls/winhttp/: session.c
dlls/wmvcore/: Makefile.in  async_reader.c
dlls/wow64/: process.c  struct32.h  syscall.c  virtual.c
dlls/wow64win/: user.c
dlls/ws2_32/: protocol.c  socket.c
dlls/xinput1_3/: main.c
include/: config.h.in  d3dx11tex.h  ntgdi.h  ntuser.h  pdh.h  winnt.h  winternl.h
loader/: main.c  preloader.c  wine.inf.in
loader64/: Makefile.in
server/: Makefile.in  d3dkmt.c  fd.c  file.c  file.h  fsync.c  handle.c  inproc_sync.c  main.c  mapping.c  named_pipe.c  object.h  process.c  process.h  protocol.def  ptrace.c  queue.c  registry.c  request.c  request_handlers.h  request_trace.h  sock.c  thread.c  token.c  user.h  window.c  winstation.c
tools/: Makefile.in  make_requests  makedep.c
wine-nx-probe/: .gitignore  3d-accel-scoping.md  CMakeLists.txt  README.md  build-switch.sh  check-wine-horizon.sh  check-wine-ntdll-switch.sh  perf-lab-log.md  wowbox64-scoping.md
wine-nx-probe/build-wine-arm64-pe/: config.status
wine-nx-probe/build-wine-arm64-pe/include/: config.h
wine-nx-probe/build-wine-arm64-pe/tools/: makedep
wine-nx-probe/cmake/: switch-devkitA64.cmake
wine-nx-probe/docker-host-sim/: Dockerfile  hello.c  run-host-sim.sh
wine-nx-probe/samples/: curl.args  trurl.args
wine-nx-probe/samples/cube32/: cube32.c
wine-nx-probe/samples/direct-blit/: direct_blit.c
wine-nx-probe/samples/gui-smoke/: gui_smoke.c
wine-nx-probe/source/: deko3d_smoke.c  jit_smoke.c  main.cpp  ntdll_file_smoke.c  ntdll_loader_compat.h  ntdll_pe_compat.c  ntdll_server_smoke.c  ntdll_server_smoke_stubs.c  pe_ntdll_smoke.c  pe_real_report.c  pe_smoke.c  runtime.c  runtime_deko3d.c  runtime_platform.c  ws2_32_unix_stub.c
wine-nx-probe/switch-shims/: README.md  dlfcn.h  macos26-loader-incompatibility.md
wine-nx-probe/syntax/: config.h  horizon_syntax_shim.h
wine-nx-probe/tools/: fetch-samples.sh  generate-wine-headers.sh  sync-switch-wine-package.sh
(+79 files in other folders)
